--- a/packages/locales/en/translation.json
+++ b/packages/locales/en/translation.json
@@ -25,7 +25,7 @@
       "title": "Search"
     },
     "5": {
-      "description": "Did you get how to use it? Send questions, feature requests, improvements, and bug reports to Twitter (<3>@TheGodOfNeet</3>）or GitHub (<5>neet/refined-itsukara-link</5>)!<7></7>The project is open source software and we are looking for contributors who can implement better! Enjoy!",
+      "description": "Did you get how to use it? Send questions, feature requests, improvements, and bug reports GitHub (<3>neet/refined-itsukara-link</3>)!<5></5>The project is open source software and we are looking for contributors who can implement better! Enjoy!",
       "title": "Contribution"
     },
     "done": "Done",
