--- a/packages/locales/ja/translation.json
+++ b/packages/locales/ja/translation.json
@@ -25,7 +25,7 @@
       "title": "検索機能"
     },
     "5": {
-      "description": "使い方はお分かりいただけましたか？ 質問や機能のリクエスト、改善点、バグの報告は Twitter（<3>@TheGodOfNeet</3>） か、GitHub（<5>neet/refined-itsukara-link</5>） までお寄せください！<7></7>このプロジェクトはオープンソースソフトウェアで、より良い実装をしていただけるコントリビューターも募集しています！ それではお楽しみください！",
+      "description": "使い方はお分かりいただけましたか？ 質問や機能のリクエスト、改善点、バグの報告は GitHub（<3>aizwellenstan/refined-itsukara-ssr</3>） までお寄せください！<5></5>このプロジェクトはオープンソースソフトウェアで、より良い実装をしていただけるコントリビューターも募集しています！ それではお楽しみください！",
       "title": "開発に参加"
     },
     "done": "完了",
